# SupaCap_Software

./: .gitignore  CMakeLists.txt  README.md  What_worked_for_me_Florence.txt  rhit-supa-soft.ino
TestingINA219/: TestingINA219.ino
TestingPWM/: TestingPWM.ino
constant-current-test/: SupaCap.cpp  SupaCap.h
constant-current-test/constant-current-another-test/constant-current_another_test/: constant-current_another_test.ino
constant-current-test/constant-current-test/: constant-current-test.ino
controller-test/: controller-test.ino
fixed-current/fixed-current/: fixed-current.ino
flashy-led/: flashy-led.ino
libraries/flashyLed/: flashyLed.h  flashyLed.ino
new-approach/new-approach/: new-approach.ino
rhit-supa-soft/: rhit-supa-soft.ino
supaCap_Code/: CMakeLists.txt
